--- a/package.json
+++ b/package.json
@@ -26,22 +26,27 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.0.0-beta.3",
         "@tailwindcss/vite": "^4.1.1",
+        "@vee-validate/zod": "^4.15.1",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.8.2",
+        "chart.js": "^4.5.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "lucide": "^0.468.0",
         "lucide-vue-next": "^0.468.0",
-        "reka-ui": "^2.2.0",
+        "reka-ui": "^2.3.1",
         "tailwind-merge": "^2.5.5",
         "tailwindcss": "^4.1.1",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.2.2",
+        "vee-validate": "^4.15.1",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
-        "ziggy-js": "^2.4.2"
+        "vue-chartjs": "^5.3.2",
+        "ziggy-js": "^2.4.2",
+        "zod": "^3.25.67"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
