env actualizado con bd correcta

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@ APP_NAME=MAMI
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL=https://monitoreo.sistemasudh.com
+APP_URL=https://monitoreo.em.sistemasudh.com
 
-# 
+#
 
 APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
@@ -24,8 +24,8 @@ LOG_LEVEL=error
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=monitoreo
-DB_USERNAME=garay
+DB_DATABASE=monitoreodb
+DB_USERNAME=wgaray
 DB_PASSWORD=5n1kWz7eRvp3DkQiD61M
 
 SESSION_DRIVER=database
